# moneta

./: .gitignore  CLA.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  cla.yml
docs/: PRD.md  user-guide.md
docs/qa-backlog/: alembic-migration-adopts-real-pre-alembic-db.md  backup-restore-round-trip-real-db.md  bearer-token-auth-genuine-remote-client.md  cashflow-numbers-real-data.md  cli-review-queue-interactive-workflow.md  cli-rich-table-rendering.md  fidelity-netbenefits-csv-import.md  financing-fingerprint-real-synchrony-accounts.md  full-history-sync-real-bridge.md  llm-classification-real-provider.md  llm-price-change-gating-real-drift.md  llm-series-verification-real-provider.md  loan-payment-self-heal-real-db-migration.md  local-timezone-dates-real-simplefin-evening-txns.md  missed-event-catchup-real-stale-series.md  moneta-serve-lifespan-shutdown.md  networth-vested-unvested-split.md  not-recurring-answer-ends-series-immediately.md  plaid-item-login-required-degradation.md  plaid-production-link-data-quality.md  (+18 more)
src/moneta/: api.py  (+9 more)
tests/: conftest.py  factories.py  test_api.py  test_autoreview.py  test_cashflow.py  test_cli.py  test_config.py  test_db.py  test_digest.py  test_e2e.py  test_events.py  test_financing.py  test_financing_detect.py  test_ingest.py  test_llm.py  test_logs.py  test_migrations.py  test_models.py  test_networth.py  test_normalize.py  test_plaid.py  test_power.py  test_queries.py  test_recurring.py  test_run.py  test_simplefin.py  test_transactions.py  test_transfers.py  test_vesting.py
(+78 files in other folders)
