[project]
name = "moneta"
version = "0.1.0"
description = "Personal finance: monthly spending power = income minus fixed costs"
readme = "README.md"
authors = [
    { name = "Anirudh Lath", email = "anirudhlath@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "litellm>=1.91.0",
    "loguru>=0.7.3",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "rich>=15.0.0",
    "sqlalchemy[asyncio]>=2.0.51",
    "tomli-w>=1.2.0",
    "typer>=0.26.8",
    "uvicorn[standard]>=0.50.2",
]

[project.scripts]
moneta = "moneta.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=2.2.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.20",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
strict = true
python_version = "3.13"

[[tool.mypy.overrides]]
module = ["litellm", "litellm.*"]
ignore_missing_imports = true
follow_imports = "skip"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
